--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>404 snake</title>
-	</head>
-	 <link
+  <head>
+    <meta charset="utf-8" />
+    <title>404 Snake</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
       crossorigin="anonymous"
@@ -128,9 +128,9 @@
         background: #1d4ed8;
       }
     </style>
-
-	<body>
-  <div id="warning">
+  </head>
+  <body>
+    <div id="warning">
       ⚠️ This game is supported only on desktop/laptop (keyboard required).
     </div>
 
@@ -144,7 +144,7 @@
       <i id="share-icon" class="fas fa-info-circle share-toggle"></i>
       <div id="share-box" class="share-box">
         <a
-          href="https://wa.me/?text=I%20found%20this%20useful%20pacman%20game%20,%20check%20it%20out:%20https://seosaurus.in/tools/"
+          href="https://wa.me/?text=I%20found%20this%20useful%20snake%20game%20,%20check%20it%20out:%20https://seosaurus.in/tools/"
           class="share-link"
           target="_blank"
           rel="noopener noreferrer"
@@ -164,7 +164,6 @@
       </div>
     </div>
 
-    <!-- Scripts -->
     <script>
       const shareIcon = document.getElementById("share-icon");
       const shareBox = document.getElementById("share-box");
@@ -189,14 +188,12 @@
         const deviceType = window.innerWidth < 1024 ? "small" : "big";
 
         if (deviceType === "small") {
-          // Mobile behavior: click to toggle
           shareIcon.onclick = () => {
             shareBox.classList.toggle("show");
           };
           shareIcon.onmouseenter = null;
           shareIcon.onmouseleave = null;
         } else {
-          // Desktop behavior: hover to show
           shareIcon.onclick = null;
           shareIcon.onmouseenter = () => shareBox.classList.add("show");
           shareIcon.onmouseleave = () => shareBox.classList.remove("show");
@@ -215,11 +212,12 @@
         showWarningIfNeeded();
       });
     </script>
- 
-		<script src="js/logic.js"></script>
-		<script src="js/controls.js"></script>
-		<script src="js/utils.js"></script>
-		<script src="js/draw.js"></script>
-		<script src="js/framework.js"></script>
-	</body>
+
+    <!-- Game Logic Scripts -->
+    <script src="js/logic.js"></script>
+    <script src="js/controls.js"></script>
+    <script src="js/utils.js"></script>
+    <script src="js/draw.js"></script>
+    <script src="js/framework.js"></script>
+  </body>
 </html>
