--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       <i id="share-icon" class="fas fa-info-circle share-toggle"></i>
       <div id="share-box" class="share-box">
         <a
-          href="https://wa.me/?text=I%20found%20this%20useful%20snake%20game%20,%20check%20it%20out:%20https://seosaurus.in/tools/"
+          href="https://wa.me/?text=I%20found%20this%20snake%20game%2C%20check%20it%20out%3A%20https%3A%2F%2Fseosaurus.in%2Ftools%2Fsnake-game%2F"
           class="share-link"
           target="_blank"
           rel="noopener noreferrer"
@@ -153,7 +153,7 @@
           Share this on WhatsApp
         </a>
         <a
-          href="https://seosaurus.in/tools/"
+          href="https://seosaurus.in/tools/snake-game/"
           class="share-link add"
           target="_blank"
           rel="noopener noreferrer"
